[project]
name = "myami"
version = "0.1.0"
description = ""
authors = [
    {name = "penne",email = "penne0505pp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord (>=2.3.2,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "supabase (>=2.0.0,<3.0.0)"
]

[dependency-groups]
dev = [
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
